--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,10 +4,15 @@ $color-black: #131313;
 $color-light-blue: #77d0ff;
 $color-dark-blue: #1c203c;
 
+/* Font Families */
+$font-family-heading: "Open Sans", sans-serif;
+$font-family-basic: "Playfair Display", serif;
+
 /* Space */
 $header-height: 6rem;
 
 $max-width: 98rem;
 
 /* Breakpoints */
+$breakpoint-large-phone: 30em; //480px
 $breakpoint-tablet: 48em; //768px
