--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -7,6 +7,7 @@
   }
 
   &__button {
+    display: flex;
     border: none;
     outline: none;
     background-color: transparent;
@@ -43,7 +44,6 @@
     background: rgba($color-black, 0.9);
     justify-content: space-around;
     align-items: center;
-    transition: all 0.2s ease-in;
 
     @include tablet {
       height: 100%;
