--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,9 @@
 @import "variables";
+@import "mixins";
 @import "typography";
 @import "base";
 
-@import "mixins";
-
 @import "layout/header";
+@import "layout/hero";
 
 @import "components/nav";
