--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,9 @@
 @import "typography";
 @import "base";
 
+@import "utilities";
+
+@import "layout/about";
 @import "layout/header";
 @import "layout/hero";
 
