--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,5 +1,6 @@
 body {
   font-family: $font-family-basic;
+  color: $color-black;
   line-height: 1.7;
 }
 
@@ -39,6 +40,16 @@ body {
       font-size: 2.5rem;
     }
   }
+}
+
+.heading-secondary {
+  font-size: 3.5rem;
+  line-height: 1.2;
+  font-family: $font-family-heading;
+}
+
+.paragraph {
+  font-size: $default-font-size;
 }
 
 // h1,
