--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,7 +4,8 @@ $color-black: #131313;
 $color-light-blue: #77d0ff;
 $color-dark-blue: #1c203c;
 
-/* Font Families */
+/* Typography */
+$default-font-size: 1.6rem;
 $font-family-heading: "Open Sans", sans-serif;
 $font-family-basic: "Playfair Display", serif;
 
