--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,8 @@
 /* Colors */
 $color-white: #fafafa;
 $color-black: #131313;
+
+/* Podcast tune project colors */
 $color-light-blue: #77d0ff;
 $color-dark-blue: #1c203c;
 
@@ -17,3 +19,4 @@ $max-width: 98rem;
 /* Breakpoints */
 $breakpoint-large-phone: 30em; //480px
 $breakpoint-tablet: 48em; //768px
+$breakpoint-laptop: 61.25em; //980px
