--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,8 +5,9 @@
 
 @import "utilities";
 
-@import "layout/about";
 @import "layout/header";
 @import "layout/hero";
+@import "layout/layout";
 
 @import "components/nav";
+@import "components/project";
