--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,13 +8,12 @@ $color-dark-blue: #1c203c;
 
 /* Typography */
 $default-font-size: 1.6rem;
-$font-family-heading: "Open Sans", sans-serif;
-$font-family-basic: "Playfair Display", serif;
+$font-family-basic: "Open Sans", sans-serif;
 
 /* Space */
 $header-height: 6rem;
 
-$max-width: 98rem;
+$max-width: 120rem;
 
 /* Breakpoints */
 $breakpoint-large-phone: 30em; //480px
