--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -8,5 +8,13 @@
 }
 
 .u-margin-bottom-small {
+  margin-bottom: 1rem;
+}
+
+.u-margin-bottom-medium {
   margin-bottom: 3rem;
+}
+
+.u-margin-bottom-large {
+  margin-bottom: 5rem;
 }
