--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -3,5 +3,11 @@
 }
 
 .projects {
-  padding: 8rem 0rem;
+  padding-top: 8rem;
+}
+
+.footer {
+  padding: 4rem 0;
+  background: $color-black;
+  color: $color-white;
 }
