--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,41 @@ html {
 .u-margin-bottom-large {
   margin-bottom: 5rem; }
 
+.contacts {
+  padding: 8rem 0; }
+  .contacts__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 1rem;
+    align-items: center;
+    justify-content: center; }
+  .contacts__link:link, .contacts__link:visited {
+    text-decoration: none; }
+  .contacts__link:not(:last-of-type) {
+    margin-right: 2rem; }
+    @media (min-width: 48em) {
+      .contacts__link:not(:last-of-type) {
+        margin-right: 3rem; } }
+    @media (min-width: 61.25em) {
+      .contacts__link:not(:last-of-type) {
+        margin-right: 4rem; } }
+  .contacts__icon {
+    width: 3rem;
+    height: 3rem;
+    fill: #131313; }
+    @media (min-width: 30em) {
+      .contacts__icon {
+        width: 4rem;
+        height: 4rem; } }
+    @media (min-width: 48em) {
+      .contacts__icon {
+        width: 5.5rem;
+        height: 5.5rem; } }
+    @media (min-width: 61.25em) {
+      .contacts__icon {
+        width: 7rem;
+        height: 7rem; } }
+
 .header {
   position: fixed;
   top: 0;
@@ -140,7 +175,12 @@ html {
   padding: 8rem 2rem; }
 
 .projects {
-  padding: 8rem 0rem; }
+  padding-top: 8rem; }
+
+.footer {
+  padding: 4rem 0;
+  background: #131313;
+  color: #fafafa; }
 
 .nav {
   position: relative;
@@ -199,7 +239,7 @@ html {
         width: auto; } }
   @media (min-width: 48em) {
     .nav__item {
-      border-bottom: 2px solid transparent; }
+      border-bottom: 3px solid transparent; }
       .nav__item:not(:last-child) {
         margin-right: 2rem; } }
   .nav__item:hover {
@@ -207,7 +247,7 @@ html {
     @media (min-width: 48em) {
       .nav__item:hover {
         background: transparent;
-        border-bottom: 2px solid #fafafa; } }
+        border-bottom: 3px solid #fafafa; } }
   .nav__link:link, .nav__link:visited {
     font-family: serif;
     font-size: 3.5rem;
@@ -301,25 +341,36 @@ html {
     .project__link:link, .project__link:visited {
       color: #fafafa;
       text-decoration: none;
-      padding: 0.75rem 1rem;
+      padding: 0.5rem 0.75rem;
       border-radius: 2px;
       border: 1px solid #fafafa;
-      font-size: 2rem;
+      font-size: 1.8rem;
       font-weight: bold;
       transition: all 0.3s;
       box-shadow: 0 0.5rem 1rem rgba(19, 19, 19, 0.2); }
+      @media (min-width: 30em) {
+        .project__link:link, .project__link:visited {
+          padding: 0.75rem 1rem;
+          font-size: 2.1rem; } }
     .project__link:hover {
       box-shadow: 0 1rem 2rem rgba(19, 19, 19, 0.4);
       background: #fafafa;
       color: #77d0ff; }
     .project__link:not(:last-of-type) {
-      margin-right: 1rem; }
+      margin-right: 0.5rem; }
+      @media (min-width: 30em) {
+        .project__link:not(:last-of-type) {
+          margin-right: 1rem; } }
   .project__link-icon {
     display: inline-block;
     fill: currentColor;
-    height: 3rem;
-    width: 3rem;
+    height: 2rem;
+    width: 2rem;
     margin-left: 0.5rem; }
+    @media (min-width: 30em) {
+      .project__link-icon {
+        height: 3rem;
+        width: 3rem; } }
 
 #podcast-tune {
   background: linear-gradient(#0091dd, #44beff);
