Add Smooth scroll lib. Add polyfill for svg.use. Add srcset for project screenshot.

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -17,6 +17,8 @@ body {
     font-weight: bold;
     line-height: 1.2;
 
+    animation: moveInLeft 1s ease-out;
+
     @include large-phone {
       font-size: 5rem;
     }
@@ -32,6 +34,8 @@ body {
     line-height: 1.4;
     letter-spacing: 1px;
     font-weight: normal;
+
+    animation: moveInRight 1s ease-out;
 
     @include large-phone {
       font-size: 2rem;
