Rewrite Hero section (from background-attachments: fixed to position: fixed in ::before). Fix nav bar in IE11.

--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -1,9 +1,11 @@
 .about {
   padding: 8rem 2rem;
+  background: $color-white;
 }
 
 .projects {
   padding-top: 8rem;
+  background: $color-white;
 }
 
 .footer {
