--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,10 @@ html {
   font-size: 62.5%;
   overflow-x: hidden; }
 
+body {
+  background: #fafafa;
+  z-index: 1; }
+
 .u-center-text {
   text-align: center; }
 
@@ -104,7 +108,8 @@ html {
     transform: translate(0); } }
 
 .contacts {
-  padding: 8rem 0; }
+  padding: 8rem 0;
+  background: #fafafa; }
   .contacts__list {
     display: flex;
     flex-wrap: wrap;
@@ -177,28 +182,42 @@ html {
     background: rgba(19, 19, 19, 0.9); } }
 
 .hero {
-  background-image: linear-gradient(rgba(19, 19, 19, 0.3), rgba(19, 19, 19, 0.3)), url("https://res.cloudinary.com/zimniros/image/upload/v1535017288/Portfolio/hero.jpg");
-  background-size: cover;
-  background-position: center center;
+  position: relative;
   width: 100%;
   height: 70vh;
-  background-attachment: fixed;
-  margin-top: 6rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center; }
+  margin-top: 6rem; }
   @media (min-width: 48em) {
     .hero {
       margin-top: 0;
-      height: 95vh;
+      height: 90vh;
       margin-top: -6rem; } }
+  .hero__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+    width: 100%; }
+    .hero__wrapper::before {
+      content: "";
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 90vh;
+      background-image: linear-gradient(rgba(19, 19, 19, 0.3), rgba(19, 19, 19, 0.3)), url("https://res.cloudinary.com/zimniros/image/upload/v1535017288/Portfolio/hero.jpg");
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      z-index: -10; }
 
 .about {
-  padding: 8rem 2rem; }
+  padding: 8rem 2rem;
+  background: #fafafa; }
 
 .projects {
-  padding-top: 8rem; }
+  padding-top: 8rem;
+  background: #fafafa; }
 
 .footer {
   padding: 4rem 0;
