--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,25 +1,42 @@
 .hero {
-  background-image: linear-gradient(
-      rgba($color-black, 0.3),
-      rgba($color-black, 0.3)
-    ),
-    url("https://res.cloudinary.com/zimniros/image/upload/v1535017288/Portfolio/hero.jpg");
-  background-size: cover;
-  background-position: center center;
+  position: relative;
+
   width: 100%;
   height: 70vh;
-  background-attachment: fixed;
 
   margin-top: $header-height;
 
   @include tablet {
     margin-top: 0;
-    height: 95vh;
+    height: 90vh;
     margin-top: -$header-height;
   }
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  &__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+    width: 100%;
+
+    &::before {
+      content: "";
+      position: fixed;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 90vh;
+
+      background-image: linear-gradient(
+          rgba($color-black, 0.3),
+          rgba($color-black, 0.3)
+        ),
+        url("https://res.cloudinary.com/zimniros/image/upload/v1535017288/Portfolio/hero.jpg");
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      z-index: -10;
+    }
+  }
 }
