--- a/css/style.css
+++ b/css/style.css
@@ -4,22 +4,21 @@
 /* Space */
 /* Breakpoints */
 body {
-  font-family: "Open Sans", sans-serif;
+  letter-spacing: 1px;
   color: #131313;
-  line-height: 1.5;
-  letter-spacing: 1px; }
+  font-family: "Open Sans", sans-serif;
+  line-height: 1.5; }
 
 .heading-primary {
-  color: #fafafa;
-  backface-visibility: hidden;
   margin-bottom: 6rem;
-  user-select: none; }
+  user-select: none;
+  color: #fafafa;
+  backface-visibility: hidden; }
   .heading-primary--main {
     display: block;
     font-size: 3rem;
     font-weight: bold;
-    line-height: 1.2;
-    animation: moveInLeft 1s ease-out; }
+    line-height: 1.2; }
     @media (min-width: 30em) {
       .heading-primary--main {
         font-size: 5rem; } }
@@ -28,11 +27,10 @@ body {
         font-size: 7rem; } }
   .heading-primary--sub {
     display: block;
-    font-size: 1.6rem;
-    line-height: 1.4;
     letter-spacing: 1px;
+    font-size: 1.6rem;
     font-weight: normal;
-    animation: moveInRight 1s ease-out; }
+    line-height: 1.4; }
     @media (min-width: 30em) {
       .heading-primary--sub {
         font-size: 2rem; } }
@@ -42,16 +40,16 @@ body {
 
 .heading-secondary {
   display: inline-block;
-  font-size: 3.5rem;
-  line-height: 1.4;
-  font-weight: bold;
   color: #131313;
-  border-bottom: 3px solid currentColor; }
+  border-bottom: 3px solid currentColor;
+  font-size: 3.5rem;
+  font-weight: bold;
+  line-height: 1.4; }
 
 .paragraph {
-  font-size: 1.6rem;
   margin-bottom: 0.5rem;
-  color: currentColor; }
+  color: currentColor;
+  font-size: 1.6rem; }
 
 * {
   margin: 0;
@@ -63,13 +61,9 @@ body {
   box-sizing: inherit; }
 
 html {
+  overflow-x: hidden;
   box-sizing: border-box;
-  font-size: 62.5%;
-  overflow-x: hidden; }
-
-body {
-  background: #fafafa;
-  z-index: 1; }
+  font-size: 62.5%; }
 
 .u-center-text {
   text-align: center; }
@@ -87,35 +81,15 @@ body {
 .u-margin-bottom-large {
   margin-bottom: 5rem; }
 
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem); }
-  80% {
-    transform: translateX(1rem); }
-  100% {
-    opacity: 1;
-    transform: translate(0); } }
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem); }
-  80% {
-    transform: translateX(-1rem); }
-  100% {
-    opacity: 1;
-    transform: translate(0); } }
-
 .contacts {
   padding: 8rem 0;
   background: #fafafa; }
   .contacts__list {
     display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 1rem;
     align-items: center;
-    justify-content: center; }
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 1rem; }
   .contacts__link:link, .contacts__link:visited {
     text-decoration: none; }
   .contacts__link:not(:last-of-type) {
@@ -145,20 +119,20 @@ body {
 
 .header {
   position: fixed;
+  z-index: 10;
   top: 0;
   left: 0;
-  background: #131313;
-  height: 6rem;
   width: 100%;
-  z-index: 10; }
+  height: 6rem;
+  background: #131313; }
   @media (min-width: 48em) {
     .header {
       position: relative;
       background: transparent; } }
   .header__wrapper {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     height: 100%; }
   .header__logo-box, .header__nav {
     margin: 0 2rem; }
@@ -166,8 +140,8 @@ body {
     .header__nav {
       margin: 0; } }
   .header__logo-box {
-    height: 3rem;
-    display: flex; }
+    display: flex;
+    height: 3rem; }
     @media (min-width: 48em) {
       .header__logo-box {
         height: 4rem;
@@ -188,28 +162,31 @@ body {
   margin-top: 6rem; }
   @media (min-width: 48em) {
     .hero {
-      margin-top: 0;
       height: 90vh;
       margin-top: -6rem; } }
   .hero__wrapper {
     display: flex;
-    justify-content: center;
     align-items: center;
-    text-align: center;
+    justify-content: center;
+    width: 100%;
     height: 100%;
-    width: 100%; }
+    text-align: center; }
     .hero__wrapper::before {
-      content: "";
       position: fixed;
+      z-index: -10;
+      top: 6rem;
       left: 0;
-      top: 0;
       width: 100%;
-      height: 90vh;
+      height: 70vh;
+      content: "";
       background-image: linear-gradient(rgba(19, 19, 19, 0.3), rgba(19, 19, 19, 0.3)), url("https://res.cloudinary.com/zimniros/image/upload/v1535017288/Portfolio/hero.jpg");
-      background-size: cover;
-      background-position: center center;
       background-repeat: no-repeat;
-      z-index: -10; }
+      background-position: center center;
+      background-size: cover; }
+      @media (min-width: 48em) {
+        .hero__wrapper::before {
+          top: 0;
+          height: 90vh; } }
 
 .about {
   padding: 8rem 2rem;
@@ -221,8 +198,8 @@ body {
 
 .footer {
   padding: 4rem 0;
-  background: #131313;
-  color: #fafafa; }
+  color: #fafafa;
+  background: #131313; }
 
 .nav {
   position: relative;
@@ -232,10 +209,10 @@ body {
       height: 100%; } }
   .nav__button {
     display: flex;
+    cursor: pointer;
     border: none;
     outline: none;
-    background-color: transparent;
-    cursor: pointer; }
+    background-color: transparent; }
     @media (min-width: 48em) {
       .nav__button {
         display: none; } }
@@ -245,37 +222,37 @@ body {
   .nav__close-icon {
     display: none; }
   .nav__list {
+    position: fixed;
+    z-index: -1;
+    top: 6rem;
+    right: 0;
+    bottom: 0;
+    left: 0;
     display: flex;
-    transform: translateY(-150%);
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
     margin: 0;
     padding: 0;
     list-style: none;
-    flex-direction: column;
-    position: fixed;
-    top: 6rem;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(19, 19, 19, 0.9);
-    justify-content: space-around;
-    align-items: center;
     transition: all 0.3s;
-    z-index: -1; }
+    transform: translateY(-150%);
+    background: rgba(19, 19, 19, 0.9); }
     @media (min-width: 48em) {
       .nav__list {
-        height: 100%;
-        flex-direction: row;
         position: relative;
-        transform: translateY(0);
+        z-index: 1;
         top: 0;
-        background: transparent;
-        z-index: 1; } }
+        flex-direction: row;
+        height: 100%;
+        transform: translateY(0);
+        background: transparent; } }
   .nav__item, .nav__link {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    width: 100%; }
+    width: 100%;
+    height: 100%; }
     @media (min-width: 48em) {
       .nav__item, .nav__link {
         width: auto; } }
@@ -290,17 +267,17 @@ body {
       background: rgba(250, 250, 250, 0.2); }
       @media (min-width: 48em) {
         .nav__item:hover {
-          background: transparent;
-          border-bottom: 3px solid #fafafa; } }
+          border-bottom: 3px solid #fafafa;
+          background: transparent; } }
   .nav__link:link, .nav__link:visited {
-    font-family: serif;
-    font-size: 3.5rem;
     text-decoration: none;
-    color: #fafafa; }
+    color: #fafafa;
+    font-family: serif;
+    font-size: 3.5rem; }
     @media (min-width: 48em) {
       .nav__link:link, .nav__link:visited {
-        font-size: 2rem;
-        padding: 0 2rem; } }
+        padding: 0 2rem;
+        font-size: 2rem; } }
 
 .nav-is-open .nav__open-icon {
   display: none;
@@ -328,8 +305,8 @@ body {
     flex-direction: column; }
     @media (min-width: 61.25em) {
       .project__wrapper {
-        flex-direction: row;
-        align-items: center; } }
+        align-items: center;
+        flex-direction: row; } }
   .project__image-wrapper, .project__info {
     min-height: 1px; }
     @media (min-width: 61.25em) {
@@ -351,55 +328,55 @@ body {
   .project__name {
     font-size: 2.5rem; }
   .project__features-list {
-    list-style: none;
-    margin-left: 1rem; }
+    margin-left: 1rem;
+    list-style: none; }
   .project__feature {
-    padding-left: 1.5rem;
+    position: relative;
     margin-bottom: 0.5rem;
-    font-size: 1.6rem;
-    position: relative; }
+    padding-left: 1.5rem;
+    font-size: 1.6rem; }
     .project__feature::before {
-      content: "";
       position: absolute;
       top: 0.75rem;
       left: 0;
       width: 0.7rem;
       height: 0.7rem;
+      content: "";
       border-radius: 50%;
       background: currentColor; }
   .project__tools-list {
-    list-style: none;
     display: flex;
-    flex-wrap: wrap; }
+    flex-wrap: wrap;
+    list-style: none; }
   .project__tools-item {
+    margin-bottom: 1rem;
     padding: 0.5rem 0.75rem;
     border: 1px solid currentColor;
     border-radius: 2px;
-    font-size: 1.4rem;
-    margin-bottom: 1rem; }
+    font-size: 1.4rem; }
     .project__tools-item:not(:last-of-type) {
       margin-right: 1rem; }
   .project__link {
     display: inline-flex;
     align-items: center; }
     .project__link:link, .project__link:visited {
-      color: #fafafa;
-      text-decoration: none;
       padding: 0.5rem 0.75rem;
-      border-radius: 2px;
-      border: 1px solid #fafafa;
-      font-size: 1.8rem;
-      font-weight: bold;
       transition: all 0.3s;
-      box-shadow: 0 0.5rem 1rem rgba(19, 19, 19, 0.2); }
+      text-decoration: none;
+      color: #fafafa;
+      border: 1px solid #fafafa;
+      border-radius: 2px;
+      box-shadow: 0 0.5rem 1rem rgba(19, 19, 19, 0.2);
+      font-size: 1.8rem;
+      font-weight: bold; }
       @media (min-width: 30em) {
         .project__link:link, .project__link:visited {
           padding: 0.75rem 1rem;
           font-size: 2.1rem; } }
     .project__link:hover {
-      box-shadow: 0 1rem 2rem rgba(19, 19, 19, 0.4);
+      color: #77d0ff;
       background: #fafafa;
-      color: #77d0ff; }
+      box-shadow: 0 1rem 2rem rgba(19, 19, 19, 0.4); }
     .project__link:not(:last-of-type) {
       margin-right: 0.5rem; }
       @media (min-width: 30em) {
@@ -407,15 +384,15 @@ body {
           margin-right: 1rem; } }
   .project__link-icon {
     display: inline-block;
-    fill: currentColor;
-    height: 2rem;
     width: 2rem;
-    margin-left: 0.5rem; }
+    height: 2rem;
+    margin-left: 0.5rem;
+    fill: currentColor; }
     @media (min-width: 30em) {
       .project__link-icon {
-        height: 3rem;
-        width: 3rem; } }
+        width: 3rem;
+        height: 3rem; } }
 
 #podcast-tune {
-  background: linear-gradient(#0091dd, #44beff);
-  color: #fafafa; }
+  color: #fafafa;
+  background: linear-gradient(#0091dd, #44beff); }
