--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,42 +1,43 @@
 .hero {
   position: relative;
-
   width: 100%;
   height: 70vh;
-
   margin-top: $header-height;
 
   @include tablet {
-    margin-top: 0;
     height: 90vh;
     margin-top: -$header-height;
   }
 
   &__wrapper {
     display: flex;
-    justify-content: center;
     align-items: center;
-    text-align: center;
-    height: 100%;
+    justify-content: center;
     width: 100%;
+    height: 100%;
+    text-align: center;
 
     &::before {
-      content: "";
       position: fixed;
+      z-index: -10;
+      top: $header-height;
       left: 0;
-      top: 0;
       width: 100%;
-      height: 90vh;
-
+      height: 70vh;
+      content: "";
       background-image: linear-gradient(
           rgba($color-black, 0.3),
           rgba($color-black, 0.3)
         ),
         url("https://res.cloudinary.com/zimniros/image/upload/v1535017288/Portfolio/hero.jpg");
-      background-size: cover;
-      background-position: center center;
       background-repeat: no-repeat;
-      z-index: -10;
+      background-position: center center;
+      background-size: cover;
+
+      @include tablet {
+        top: 0;
+        height: 90vh;
+      }
     }
   }
 }
